<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Sri Lanka Crop Information!</string>
	<string name="selectcrop">Select a crop</string>
	<string name="selectlocation">Select a location</string>
	<string name="enterprice">Enter price</string>
	<string name="buttonsearch">Search</string>
	<string name="buttonhome">Back to search</string>
	<string name="radiolessthan">Less than</string>
	<string name="radiogreaterthan">Greater than</string>
	<string name="app_name">Sri Lanka Crop Information!</string>
	<string name="pricetextdefaultvalue">0</string>
	<string name="helpback">Back</string>
	<string name="submitmenu">Search</string>
	<string name="backmenu" >Back</string>

</resources>
